@@ -5,8 +5,10 @@
   - (zathor) [VideoUtil] fixed a problem if two identical audio sources
              are beeing used in OneClick
   - (zathor) [AutoUpdateServerConfigWindow] new servers will be checked during add
-  - (zathor) [Settings] hard wired the stable & development update servers.
+  - (zathor) [Settings] hard-wired the stable & development update servers.
              custom servers can be added if required
+  - (zathor) fixed custom FPS, AR and file size saving so that
+             only manually added values will be saved permanently. Bug #3064654
 
 0.3.5.10
   - (sharktooth) [x264] Added 64:45 SAR option
